fixed playRPC funtion, missing {}

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
 <body>
   
     <script>
+
+        //picks computer selection
+
         function computerPlay(){
            return  Math.floor(Math.random() * 3 + 1);
+        }
+
+        //plays game of Rock Paper Scissors
+
+        function playRPC(playerSelection, computerSelection){
+            if (playerSelection == computerSelection){
+                return ('This round is a tie');
+            }
+            
+            else if (player){
+
+            }
+
         }
     </script>    
 
